tests/invalid/trait/assoc_projection_struct_type_arg_mismatch.facet
trait Provider {
  type Item;
}

impl Provider for unrestricted isize {
  type Item = unrestricted bool;
}

struct Box<T> {
  value: unrestricted T
}

fn main() -> unrestricted Box<unrestricted <unrestricted isize as Provider>::Item> {
  Box<unrestricted <unrestricted isize as Provider>::Item> { value = 1 }
}
